TestCases/Errors/Haversine/observations/sst/aut_02_obs.spm
obs r16-c5 0.000654450261780105
obs r15-c6 0.000430501786922666
obs r16-c6 0.000419996666716415
obs r17-c6 0.000285902268427499
obs r18-c6 1e-08
obs r20-c6 1e-08
obs r15-c7 0.000380988243010708
obs r16-c7 0.000303660266505981
obs r17-c7 0.000181173734348546
obs r18-c7 1e-08
obs r20-c7 1e-08
obs r5-c12 0.00157142857142857
obs r18-c12 1e-08
obs r19-c12 1e-08
obs r5-c13 0.00193945868945869
obs r18-c14 1e-08
obs r19-c14 1e-08
obs r18-c15 1e-08
obs r19-c15 1e-08
obs r9-c17 0.00444444444444444
obs r9-c18 0.0211855897605649
obs r9-c19 0.00601503759398496
obs r11-c19 0.0142261904761905
obs r11-c20 0.0196577380952381
obs r11-c21 0.01
error_value r16-c5 0.2
error_value r15-c6 0.2
error_value r16-c6 0.2
error_value r17-c6 0.2
error_value r18-c6 0.2
error_value r20-c6 0.2
error_value r15-c7 0.2
error_value r16-c7 0.2
error_value r17-c7 0.2
error_value r18-c7 0.2
error_value r20-c7 0.2
error_value r5-c12 0.2
error_value r18-c12 0.2
error_value r19-c12 0.2
error_value r5-c13 0.2
error_value r18-c14 0.2
error_value r19-c14 0.2
error_value r18-c15 0.2
error_value r19-c15 0.2
error_value r9-c17 0.2
error_value r9-c18 0.2
error_value r9-c19 0.2
error_value r11-c19 0.2
error_value r11-c20 0.2
error_value r11-c21 0.2
